# clist

.github/workflows/: frontend-deploy.yaml
Auth/: Dockerfile  README.md  pyproject.toml  requirements.txt
Auth/src/: main.py
Auth/src/model/: authclass.py  crud.py  db.py  model.py  schema.py
Frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
Frontend/public/: index.html  manifest.json
Frontend/src/: App.js  App.module.css  index.css
Frontend/src/UI/: Button.js  Button.module.css  Dropdown.js  Dropdown.module.css  Input.js  Input.module.css
Frontend/src/components/: AddClothesItem.js  ClothesItem.js  ClothesItem.module.css  ClothesList.js  ClothesList.module.css  Logo.js  Logo.module.css  MainNavigation.js  MainNavigation.module.css  PageContent.js  PageContent.module.css
Frontend/src/pages/: Closet.js  EditClothes.js  Error.js  Login.js  NewClothes.js  Recommend.js  Root.js  Signup.js
Logic/: README.md  main.py
Logic/src/: api_helper.py  data_model.py  main.py  test.py
