[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
include-package-data = false

[tool.setuptools.packages.find]
include = ['src']

[project]
name = "Clist-auth"
version = "0.0.1"
authors = [{ name = "fmowl10" }]
description = "Clist auth server"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
